--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "dependencies": {
         "core-js": "3.15.2",
         "register-service-worker": "1.7.2",
+        "svg-sprite-loader": "^4.1.6",
+        "svg-sprite-loader-mod": "^4.1.6-mod1",
+        "svgo-loader": "^2.2.1",
         "vue": "2.6.14",
         "vue-class-component": "7.2.6",
         "vue-property-decorator": "9.1.2",
@@ -35,7 +38,6 @@
         "eslint-plugin-vue": "6.2.2",
         "sass": "1.36.0",
         "sass-loader": "8.0.2",
-        "svg-sprite-loader": "6.0.9",
         "typescript": "4.1.6",
         "vue-template-compiler": "2.6.14"
     }
