--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "core-js": "3.15.2",
+        "dayjs": "^1.10.7",
         "register-service-worker": "1.7.2",
         "svg-sprite-loader": "^4.1.6",
         "svg-sprite-loader-mod": "^4.1.6-mod1",
