--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "@types/echarts": "^4.9.12",
+        "@types/lodash": "^4.14.178",
         "core-js": "3.15.2",
         "dayjs": "^1.10.7",
+        "echarts": "^4.9.0",
+        "lodash": "^4.17.21",
         "register-service-worker": "1.7.2",
         "svg-sprite-loader": "^4.1.6",
         "svg-sprite-loader-mod": "^4.1.6-mod1",
